# mappls-django

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
example/example/: settings.py
example/hello/: admin.py  forms.py  models.py
mappls_map_widget/: apps.py  widgets.py
mappls_map_widget/templates/: mappls_pin_with_embed_widget.html
tests/: settings.py  test_widgets.py
