[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mappls-django"
version = "0.1.0"
description = "Mappls Map Widget for Django"
authors = [
    { name = "Soumay Gupta", email = "pmrs9673@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "Django>=3.2"
]

[project.urls]
Homepage = "https://github.com/soumayg9673/mappls-django"